updated tests